<resources>
    <string name="app_name">LayerInk</string>

    <string name="menu">Menu</string>
    <string name="brush">Brush</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="titleBrushDialog">Brush options</string>
    <string name="colorInkBrushDialog">Ink color</string>
    <string name="sizeBrushDialog">Brush size</string>
    <string name="doneBushDialog">Done</string>
    <string name="cancelBrushDialog">Cancel</string>

    <string name="message_sauv">Votre image a été sauvegardée =^^=</string>
    <string name="message_takephoto">Voyage vers l\'appareil photo en cours</string>

    <string name="message_openGallery">Voyage vers la gallerie en cours</string>

    <string name="dataseeTitle"> Vos utilisations d\'aujourd\'hui </string>
</resources>
